k8s-ad-auth/gangway_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gangway
  namespace: kube-system
  labels:
    app: gangway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gangway
  strategy:
  template:
    metadata:
      labels:
        app: gangway
    spec:
      containers:
        - name: gangway
          image: gcr.io/heptio-images/gangway:v3.1.0
          imagePullPolicy: Always
          command: ["gangway", "-config", "/gangway/gangway.yaml"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "100m"
              memory: "100Mi"
          volumeMounts:
            - name: gangway
              mountPath: /gangway/
            - name: ca-crt
              mountPath: /opt
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 60
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3

      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.230.144.12
          - 10.230.144.14
        searches:
          - test.ru
        options:
          - name: ndots
            value: "2"
          - name: edns0


      volumes:
        - name: gangway
          configMap:
            name: gangway
        - name: ca-crt
          secret:
            secretName: ca
